[project]
name = "vlsi-floorplanning-sa"
version = "0.1.0"
description = "VLSI floor-planning with module-order experiments and simulated annealing."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
